// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewImage not renders a fallback image if showDefault prop is false 1`] = `
<img
  alt="Item title"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image 1`] = `
<img
  alt="Item title"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop 1`] = `
<img
  alt="Alt prop"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop empty 1`] = `
<img
  alt=""
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a preview image 1`] = `
<img
  alt="Item title"
  image_field="image"
  item={
    Object {
      "@id": "http://localhost:3000/something",
      "image_field": "image",
      "image_scales": Object {
        "image": Array [
          Object {
            "download": "@@images/image",
            "height": 400,
            "scales": Object {
              "preview": Object {
                "download": "@@images/image-400.png",
                "height": 400,
                "width": 400,
              },
            },
            "width": 400,
          },
        ],
      },
      "title": "Item title",
    }
  }
/>
`;

exports[`PreviewImage renders a preview image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  image_field="image"
  item={
    Object {
      "@id": "http://localhost:3000/something",
      "image_field": "image",
      "image_scales": Object {
        "image": Array [
          Object {
            "download": "@@images/image",
            "height": 400,
            "scales": Object {
              "preview": Object {
                "download": "@@images/image-400.png",
                "height": 400,
                "width": 400,
              },
            },
            "width": 400,
          },
        ],
      },
      "title": "Item title",
    }
  }
/>
`;
